# crustpy

./: .gitignore  Cargo.toml  README.MD  Readme.MD
rust-blink/: Cargo.toml  openocd.cfg  openocd.gdb
rust-blink/src/: main.rs
stm32f1xx_peripheral/: Cargo.toml
stm32f1xx_peripheral/src/: dac.rs  dma1.rs  ethernet_ptp.rs  gpioa.rs  lib.rs  rtc.rs  usb.rs
stm32f1xx_peripheral/src/afio/: evcr.rs
stm32f1xx_peripheral/src/bkp/: dr13.rs  dr17.rs  dr21.rs  dr3.rs  dr34.rs  dr41.rs  dr6.rs  dr7.rs  rtccr.rs
stm32f1xx_peripheral/src/can1/: can_fm1r.rs  can_rdh0r.rs  can_rf0r.rs  can_tdh0r.rs  can_tdl0r.rs  can_tdl2r.rs  can_tdt1r.rs  f11r1.rs  f12r2.rs  f2r1.rs  f3r2.rs  f4r1.rs
stm32f1xx_peripheral/src/dac/: dhr8r1.rs  dor2.rs
stm32f1xx_peripheral/src/dbg/: cr.rs
stm32f1xx_peripheral/src/dma1/: ccr4.rs
stm32f1xx_peripheral/src/ethernet_dma/: dmabmr.rs  dmamfbocr.rs  dmasr.rs
stm32f1xx_peripheral/src/ethernet_mac/: maca2hr.rs  maca3hr.rs  macsr.rs
stm32f1xx_peripheral/src/ethernet_mmc/: mmcrgufcr.rs  mmcrimr.rs
stm32f1xx_peripheral/src/ethernet_ptp/: ptpssir.rs  ptpttlr.rs
stm32f1xx_peripheral/src/exti/: swier.rs
stm32f1xx_peripheral/src/fsmc/: btr2.rs  btr4.rs
stm32f1xx_peripheral/src/gpioa/: crh.rs  crl.rs
stm32f1xx_peripheral/src/rcc/: apb1rstr.rs  apb2enr.rs  csr.rs
stm32f1xx_peripheral/src/rtc/: prll.rs
stm32f1xx_peripheral/src/sdio/: arg.rs  dcount.rs  mask.rs  resp3.rs  sta.rs
stm32f1xx_peripheral/src/tim2/: ccer.rs  ccmr1_output.rs
stm32f1xx_peripheral/src/tim6/: cnt.rs
stm32f1xx_peripheral/src/uart5/: cr1.rs  cr3.rs
stm32f1xx_peripheral/src/wwdg/: cr.rs  (+1 more)
(+328 files in other folders)
