[package]
authors = ["ilyusha-durachok <moortoth@yandex.ru>"]
edition = "2018"
readme = "README.md"
name = "rust-blink"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
critical-section = { version = "1.0", optional = true }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.stm32f103]
path = "../stm32f1xx_peripheral"
features = ["rt", "critical-section"]
version = "0.1.0"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-blink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
